fix: update phone number and improve layout in Categories component; enhance drag-and-drop functionality in AdminMenuPage; add scrollbar-none style in globals.css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,10 @@ body {
   height: 3px;
 }
 
+scrollbar-none::-webkit-scrollbar {
+  display: none !important;
+}
+
 ::-webkit-scrollbar-thumb {
   background: var(--color-accent);
 }
